# rust-spidriver

./: Cargo.toml
spidriver/: Cargo.toml
spidriver-hal/: Cargo.toml
spidriver-hal/examples/: ssd1322-hal.rs
spidriver-hal/src/: hal.rs  lib.rs
spidriver/examples/: ssd1322.rs
spidriver/src/: lib.rs
