[package]
name = "spidriver-hal"
version = "0.1.0"
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
description = "Implementations of embedded-hal crates via a SPIDriver device."
license = "MIT"
keywords = ["nostd", "embedded-hal"]
repository = "https://github.com/apparentlymart/rust-spidriver"

[dependencies]
spidriver = { version = "^0.1.0", path = "../spidriver" }
embedded-hal = "^0.2.3"
nb = "^0.1.2"
